package edu.fiuba.algo3.modelo;

import java.util.ArrayList;
import java.util.Set;

public interface Respuesta {

    boolean comparar(Respuesta respuesta);
}
